feat: реализовать JPA репозитории для User и Item